--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700%7CAlex+Brush%7CPhilosopher:400,700,900" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <link rel="stylesheet" href="css/theme.css">   
+        <link rel="stylesheet" href="css/custom.css">  
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
