--- a/index.html
+++ b/index.html
@@ -1399,14 +1399,17 @@
                 </div>
             </div>
         </footer>
-      
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+      <!--
         <script src="/cdn-cgi/scripts/78d64697/cloudflare-static/email-decode.min.js"></script><script src="js/vendor/wow.js"></script>
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
+
         <script src="js/vendor/swiper.min.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
+        
         <script src="js/vendor/jquery.countTo.js"></script>
-        <script src="js/vendor/jquery.inview.js"></script>
+        <script src="js/vendor/jquery.inview.js"></script> -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_6m6Glf1-P7jvVdHZ00e3Ue_EoUNe39g"></script>
-        <script src="js/main.js"></script> 
+        <!--<script src="js/main.js"></script> -->
     </body>
 </html>
