--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <ul class="">
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">01</span>
-                                    <span class="menu-list-item-title">
+                                    <span class="pizza">
                                         <span class="menu-list-item-name">Food name</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">$22.00
