--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
                             <ul class="">
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">01</span>
-                                    <span class="pizza">
-                                        <span class="menu-list-item-name">Food name</span>
+                                    <span class="menu-list-item">
+                                        <span class="menu-list-item-name">Margatitha</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">€7.00
                                             </span>
                                         </span>
                                     </span>
