--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">01</span>
                                     <span class="menu-list-item">
-                                        <span class="menu-list-item-name">Margatitha</span>
+                                        <span class="menu-list-item-name">Margherita</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">€7.00
                                             </span>
@@ -157,7 +157,7 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">02</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Salami</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">$22.00
                                             </span>
@@ -173,7 +173,7 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">03</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Prosciutto</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">$22.00
                                             </span>
@@ -188,7 +188,7 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">04</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Hawaii</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">$22.00
                                             </span>
@@ -206,7 +206,7 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">05</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Americana</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">$22.00
                                             </span>
