--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <span class="menu-list-item">
                                         <span class="menu-list-item-name">Margherita</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">€7.00
+                                            <span class="menu-list-item-price">7.80€
                                             </span>
                                         </span>
                                     </span>
@@ -159,7 +159,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Salami</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">9.00€
                                             </span>
                                         </span>
                                     </span>
@@ -175,7 +175,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Prosciutto</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">9.00€
                                             </span>
                                         </span>
                                     </span>
@@ -190,7 +190,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Hawaii</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">9.70€
                                             </span>
                                         </span>
                                     </span>
@@ -208,7 +208,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Americana</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">9.40€
                                             </span>
                                         </span>
                                     </span>
