--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Tomatnsoße, Mozzarella</span>
                                     <span class="menu-list-item-icons">
                                         <span class="green"><span class="icon"></span>vege</span>
                                         <span class="red"><span class="icon"></span>hot</span>
@@ -164,9 +164,8 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Tomatensoße, Mozzarella, Salami</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
                                     </span>
                                 </li>
 
@@ -180,9 +179,8 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Tomatensoße, Mozzarella, Schinken</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
                                     </span>
                                 </li>
                                 <li class="menu-list-item">
@@ -195,11 +193,10 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Tomatensoße, Mozzarella, Schinken, Ananas</span>
                                     <span class="menu-list-item-icons">
                                         <span class="green"><span class="icon"></span>vege</span>
                                         <span class="red"><span class="icon"></span>hot</span>
-                                        <span class="brown"><span class="icon"></span>gluten free</span>
                                     </span>
                                 </li>
 
@@ -213,75 +210,8 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Tomatensoße, Mozzarella, Schinken, Mais</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                    </span>
-                                </li>
-
-                                <li class="menu-list-item">
-                                    <span class="menu-list-item-order">06</span>
-                                    <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
-                                        <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
-                                            </span>
-                                        </span>
-                                    </span>
-
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-                                    <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                    </span>
-                                </li>
-
-                                <li class="menu-list-item">
-                                    <span class="menu-list-item-order">07</span>
-                                    <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
-                                        <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
-                                            </span>
-                                        </span>
-                                    </span>
-
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-                                    <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                        <span class="red"><span class="icon"></span>hot</span>
-                                        <span class="brown"><span class="icon"></span>gluten free</span>
-                                    </span>
-                                </li>
-
-                                <li class="menu-list-item">
-                                    <span class="menu-list-item-order">08</span>
-                                    <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
-                                        <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
-                                            </span>
-                                        </span>
-                                    </span>
-
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-                                    <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                    </span>
-                                </li>
-
-                                <li class="menu-list-item">
-                                    <span class="menu-list-item-order">09</span>
-                                    <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
-                                        <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
-                                            </span>
-                                        </span>
-                                    </span>
-
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-                                    <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
                                     </span>
                                 </li>
                             </ul>
