--- a/index.html
+++ b/index.html
@@ -220,100 +220,45 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">01</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Spaghetti alla bolognese</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">9.30€
                                             </span>
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Tomaten-Hackfleischsoße</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                        <span class="red"><span class="icon"></span>hot</span>
-                                        <span class="brown"><span class="icon"></span>gluten free</span>
                                     </span>
                                 </li>
 
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">02</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Spaghetti alla carbonara</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">9.90€
                                             </span>
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Speck, Ei, Parmesan</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
                                     </span>
                                 </li>
 
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">03</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Spaghetti aglio e olio</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">8.80€
                                             </span>
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Knoblauch (scharf)</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                    </span>
-                                </li>
-
-                                <li class="menu-list-item">
-                                    <span class="menu-list-item-order">04</span>
-                                    <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
-                                        <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
-                                            </span>
-                                        </span>
-                                    </span>
-
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-                                    <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                        <span class="red"><span class="icon"></span>hot</span>
-                                        <span class="brown"><span class="icon"></span>gluten free</span>
-                                    </span>
-                                </li>
-
-                                <li class="menu-list-item">
-                                    <span class="menu-list-item-order">05</span>
-                                    <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
-                                        <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
-                                            </span>
-                                        </span>
-                                    </span>
-
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-                                    <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
-                                    </span>
-                                </li>
-
-                                <li class="menu-list-item">
-                                    <span class="menu-list-item-order">06</span>
-                                    <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
-                                        <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
-                                            </span>
-                                        </span>
-                                    </span>
-
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
-                                    <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
                                     </span>
                                 </li>
                             </ul>
