--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             </ul>
                         </div>
                         <div class="menu-list">
-                        <h3>Desserts</h3>
+                        <h3>Getränke</h3>
                             <ul class="">
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">01</span>
