--- a/index.html
+++ b/index.html
@@ -269,14 +269,14 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">01</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Fruchtsäafte</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">$22.00
                                             </span>
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Apfelsaft, Orangensaft, Mangosaft, ...</span>
                                     <span class="menu-list-item-icons">
                                         <span class="green"><span class="icon"></span>vege</span>
                                         <span class="red"><span class="icon"></span>hot</span>
@@ -287,7 +287,7 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">02</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Warme Getränke</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">$22.00
                                             </span>
