--- a/index.html
+++ b/index.html
@@ -291,9 +291,8 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Tee, Kaffee, Kakao, .....</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
                                     </span>
                                 </li>
 
