--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Margherita</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">7.80€
+                                            <span class="menu-list-item-price">7.80 €
                                             </span>
                                         </span>
                                     </span>
@@ -156,7 +156,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Salami</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">9.00€
+                                            <span class="menu-list-item-price">9.00 €
                                             </span>
                                         </span>
                                     </span>
@@ -171,7 +171,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Prosciutto</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">9.00€
+                                            <span class="menu-list-item-price">9.00 €
                                             </span>
                                         </span>
                                     </span>
@@ -185,7 +185,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Hawaii</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">9.70€
+                                            <span class="menu-list-item-price">9.70 €
                                             </span>
                                         </span>
                                     </span>
@@ -200,7 +200,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Americana</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">9.40€
+                                            <span class="menu-list-item-price">9.40 €
                                             </span>
                                         </span>
                                     </span>
@@ -222,7 +222,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Spaghetti alla bolognese</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">9.30€
+                                            <span class="menu-list-item-price">9.30 €
                                             </span>
                                         </span>
                                     </span>
@@ -237,7 +237,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Spaghetti alla carbonara</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">9.90€
+                                            <span class="menu-list-item-price">9.90 €
                                             </span>
                                         </span>
                                     </span>
@@ -252,7 +252,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Spaghetti aglio e olio</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">8.80€
+                                            <span class="menu-list-item-price">8.80 €
                                             </span>
                                         </span>
                                     </span>
@@ -271,7 +271,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Fruchtsäafte</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">3.00 €
                                             </span>
                                         </span>
                                     </span>
@@ -286,7 +286,7 @@
                                     <span class="menu-list-item-title">
                                         <span class="menu-list-item-name">Warme Getränke</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">2.60 €
                                             </span>
                                         </span>
                                     </span>
@@ -299,9 +299,9 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">03</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Food name</span>
+                                        <span class="menu-list-item-name">Alkoholische Getränke</span>
                                         <span class="menu-list-item-price-row">
-                                            <span class="menu-list-item-price">$22.00
+                                            <span class="menu-list-item-price">3.60 €
                                             </span>
                                         </span>
                                     </span>
