--- a/index.html
+++ b/index.html
@@ -306,9 +306,8 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                    <span class="menu-list-item-ingridients">Bier, Wein, Spirituosen</span>
                                     <span class="menu-list-item-icons">
-                                        <span class="green"><span class="icon"></span>vege</span>
                                     </span>
                                 </li>
 
