--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Tee, Kaffee, Kakao, .....</span>
+                                    <span class="menu-list-item-ingridients">Tee, Kaffee, Kakao, ...</span>
                                     <span class="menu-list-item-icons">
                                     </span>
                                 </li>
