--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                         </span>
                                     </span>
 
-                                    <span class="menu-list-item-ingridients">Bier, Wein, Spirituosen...</span>
+                                    <span class="menu-list-item-ingridients">Bier, Wein, Spirituosen, ...</span>
                                     <span class="menu-list-item-icons">
                                     </span>
                                 </li>
