--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="home-slider text-center">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <h1 class="main-heading inverse">Welcome<span>Italia is here</span>
+                            <h1 class="main-heading inverse">Ristorante del BORG<span>Italia is here</span>
                                 <span class="main-heading-decor">                          
                                     <span class="">
                                         <img class="wow fadeInUp js-rotate" data-wow-delay=".2s" src="img/asterix.svg" alt="decor" width="20" height="20">
@@ -94,7 +94,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="main-heading ">Discover menu<span> Ristaurante del BORG </span>
+                        <h2 class="main-heading ">Discover menu<span>Ristorante del BORG</span>
                             <span class="main-heading-decor">                          
                                 <span class="">
                                     <img class="wow fadeInUp js-rotate" data-wow-delay=".2s" src="img/asterix.svg" alt="decor" width="20" height="20">
