--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="main-heading">Contact<span> lorem dolorem</span>
+                        <h2 class="main-heading">Contact<span>Ristorante del BORG</span>
                             <span class="main-heading-decor">                          
                                 <span class="">
                                     <img class="wow fadeInUp js-rotate" data-wow-delay=".2s" src="img/asterix.svg" alt="decor" width="20" height="20">
