--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
                                     </span>
                                 </span>
                             </h1>
-
-                            <h2 class="home-slider-title-main">100% authentic</h2>
-                            <div class="home-slider-title-small">Lorem ipsum dolor sit amet, consectetur adipisicing</div>
+                            <div class="home-slider-title-small">Pfister 925, 6863 Egg</div>
                         </div>
                  </div>
 
