--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@
                         <div class="contact-form">
                             <form>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+                                    <input type="text" class="form-control" id="Julia" name="Lerchenmüller" placeholder="Name" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                                    <input type="text" class="form-control" id="julia.lerchenmueller@borg.at" name="email" placeholder="Email" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
+                                    <input type="text" class="form-control" id="0660 359556" name="mobile" placeholder="Mobile Number" required>
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
