--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                                 </li>
                             </ul>
                         </div>
+                      <div class="col-md-3 col-md-push-1">
                         <div class="menu-list">
                         <h3>Getränke</h3>
                             <ul class="">
