--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </h2>
                     </div>
 
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="menu-list">
                         <h3>Pizza</h3>
                             <ul class="">
@@ -190,7 +190,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-md-push-1">
+                    <div class="col-md-4 col-md-push-1">
                         <div class="menu-list">
                         <h3>Pasta</h3>
                             <ul class="">
@@ -240,6 +240,8 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="col-md-4 col-md-push-1">
                         <div class="menu-list">
                         <h3>Getränke</h3>
                             <ul class="">
