--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
         <footer class="footer section">
                     <div class="col-md-12 text-center">
-                        <img class="footer-logo" src="img/logo.png" alt="footer-logo">
+                        <img class="footer-logo" src="img/borg logo.jpeg" alt="footer-logo">
                     </div>
                 </div>
             </div>
