--- a/index.html
+++ b/index.html
@@ -325,9 +325,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="main-heading">Contact<span>Ristorante del BORG</span>
-                           
-                        </h2>
+                        <h2 class="main-heading">Contact<span>Ristorante del BORG</span></h2>
+                        <br /> <br /> <br />
                     </div>
 
                     <div class="col-md-8 col-md-push-2">
