--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="main-heading ">Discover menu<span>Ristorante del BORG</span>
-
-                        </h2>
+                        <h2 class="main-heading ">Discover menu<span>Ristorante del BORG</span></h2>
+                        <br /> <br /> <br />
                     </div>
 
                     <div class="col-md-4">
