--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="home-slider text-center">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">   
-                             <h1 class="main-heading inverse">Ristorante del BORG<span>Italia is here</span>
+                             <h1 class="main-heading">Ristorante del BORG<span>Italia is here</span>
                               
                             </h1>
                             <br \> <br \>
