--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <li class="menu-list-item">
                                     <span class="menu-list-item-order">01</span>
                                     <span class="menu-list-item-title">
-                                        <span class="menu-list-item-name">Fruchtsäafte</span>
+                                        <span class="menu-list-item-name">Fruchtsäfte</span>
                                         <span class="menu-list-item-price-row">
                                             <span class="menu-list-item-price">3.00 €
                                             </span>
